<resources>
  <string name="app_name">My MovieDB</string>

  <string name="movies">Movies</string>
  <string name="tv_shows">TV Shows</string>

  <string name="movie">Movie</string>
  <string name="tv_show">TV Show</string>
  <string name="favorite">Favorites</string>

  <string name="search">Pencarian</string>
  <string name="search_hint_description" formatted="false">Isi kata kunci untuk menemukan %s yang Anda cari</string>
  <string name="share">Bagikan</string>
  <string name="share_tv_show_title">Bagikan TV Show ini</string>
  <string name="share_movie_title">Bagikan Movie ini</string>
  <string name="btn_try_again">Coba Lagi</string>

  <string name="message_add_to_favorite">Added to Favorite</string>
  <string name="message_remove_from_favorite">Removed from Favorite</string>
  <string name="message_data_not_found">Data tidak ditemukan</string>

</resources>