<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <include
        android:id="@+id/toolbar_view"
        layout="@layout/toolbar_content"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/toolbar_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_poster"
                android:layout_width="200dp"
                android:layout_height="300dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:src="@drawable/ic_image_placeholder_error"
                />

            <include
                android:id="@+id/view_rating"
                layout="@layout/rating_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@id/iv_poster"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                tools:text="Title"
                app:layout_constraintTop_toBottomOf="@id/iv_poster"
                app:layout_constraintStart_toEndOf="@id/view_rating"
                app:layout_constraintEnd_toEndOf="parent"
                />
            <TextView
                android:id="@+id/tv_tag_line"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="italic"
                android:textColor="@color/grey"
                tools:text="Tagline"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintEnd_toEndOf="@id/tv_title"
                />
            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="8dp"
                android:textColor="@color/white"
                tools:text="Description"
                app:layout_constraintStart_toStartOf="@id/view_rating"
                app:layout_constraintTop_toBottomOf="@id/tv_tag_line"
                app:layout_constraintEnd_toEndOf="@id/tv_title"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_favorite_unchecked"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:fabSize="normal"
        tools:ignore="ContentDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>