<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_movies"
        android:title="@string/movies"
        android:icon="@drawable/ic_movies" />

    <item
        android:id="@+id/action_tv_shows"
        android:title="@string/tv_shows"
        android:icon="@drawable/ic_tv_show" />
    <item
        android:id="@+id/action_favorites"
        android:title="@string/favorite"
        android:icon="@drawable/ic_favorite"/>

</menu>