<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@+id/container_rating"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="18dp"
    android:background="@drawable/ic_rating"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/tv_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="12sp"
        android:textColor="@color/red"
        android:textStyle="bold"
        tools:text="9.8" />
</FrameLayout>